youfull/objects/Custom_Message__c.object
<CustomObject>
    <fields>
        <fullName>Component_Name_Picklist__c</fullName>
        <label>Component Name Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Title Achievements</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1SalesLeaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RisingStars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1Candidates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rising Stars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Custom Messages</relationshipLabel>
        <relationshipName>Custom_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Name__c</fullName>
        <label>Message Name</label>
        <picklist>
            <picklistValues>
                <fullName>pv_needed_neg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pv_needed_pos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pv_view_my_orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g1_needed_neg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g1_needed_pos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g1_titled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ts_needed_neg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ts_needed_pos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ri_earned_pos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ri_earned_neg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ts_toreach_pos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ts_toreach_neg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>li_needed_pos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>li_needed_neg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g1_can_message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g1_app_message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rising_star_message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g1_sal_lead_message</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message_Text__c</fullName>
        <label>Message Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_URL__c</fullName>
        <label>Message URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Title__c</fullName>
        <label>SL Title</label>
        <picklist>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Custom Message</label>
    <nameField>
        <displayFormat>CUM-{0000}</displayFormat>
        <label>Custom Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>